Add filter configuration with keywords and block list

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -119,3 +119,39 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+
+# 过滤
+filter:
+  # 执行时间间隔(s), 默认 60s
+  interval: 60
+  # 关键词
+  keywords:
+    - "经济"
+    - "科技"
+    - "政治"
+    - "国际关系"
+    - "学习"
+    - "阅读"
+    - "社会"
+  # 屏蔽词
+  block_keywords:
+    - "娱乐圈"
+    - "体育"
+
+# 过滤
+filter:
+  # 执行时间间隔(s), 默认 60s
+  interval: 60
+  # 关键词
+  keywords:
+    - "经济"
+    - "科技"
+    - "政治"
+    - "国际关系"
+    - "学习"
+    - "阅读"
+    - "社会"
+  # 屏蔽词
+  block_keywords:
+    - "娱乐圈"
+    - "体育"
